cmake_minimum_required(VERSION 3.12 FATAL_ERROR)
project(pacman VERSION 1.0 LANGUAGES C CXX)

if(POLICY CMP0079)
	cmake_policy(SET CMP0079 NEW)
endif()
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_C_STANDARD 99)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_C_EXTENSIONS OFF)
set(CMAKE_LEGACY_CYGWIN_WIN32 0)
set(CMAKE_INSTALL_INCLUDEDIR include)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/cmake/modules)

find_package(playground REQUIRED 1.0.0)
add_subdirectory(src)

set_target_properties(
	${PROJECT_NAME} PROPERTIES
	CXX_STANDARD 11
	CXX_STANDARD_REQUIRED ON
	C_STANDARD 99
	C_STANDARD_REQUIRED ON
	VERSION ${pacman_VERSION}
	SOVERSION ${pacman_VERSION}
	)  
	